<resources>
    <string name="app_name">Maréu</string>
    <string name="title_activity_list_meeting">activity_list_meeting</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Ma_Réu">Ma réu</string>
    <string name="date">date</string>
    <string name="salle">salle</string>
    <string name="organisateur">Organisateur</string>
    <string name="name">Name</string>
    <string name="entrer_le_mail_des_particpants">Entrer le mail des particpants</string>
    <string name="ajouter">Ajouter</string>
    <string name="selectionnez_une_date">Selectionnez une date</string>
    <string name="ok">Ok</string>
    <string name="heure">heure</string>
    <string name="selectionnez_une_heure_de_début">selectionnez une heure de début</string>
    <string name="Email">Email Validé</string>
    <string name="error_subject">Le sujet de la réunion n\'est pas renseigné</string>
    <string name="effacer_les_filtres">effacer les filtres</string>
    <string name="sujet">Sujet</string>
    <string name="creer">CREER</string>
    <string name="mail_non_valide">l\'email saisie n\'est pas valide</string>
    <string name ="Merci_d_entrer_un_participant">Merci d/entrer un participant</string>
    <string name="Merci_d_entrer_une_date">Merci d/entrer une date</string>
    <string name="Merci_d_entrer_une_heure_de_début">Merci d/entrer une heure de début </string>
    <string name="Merci_d_entrer_le_sujet_de_la_réunion">Merci d/entrer le sujet de la réunion</string>
    <string name="selectionnez_une_heure_de_fin">selectionnez une heure de fin</string>
    <string name="salle_indispo">La salle de reunion n\'est pas disponible sur ce creneau</string>
    <string name="heure_fin">Merci d\'entrer une heure de fin</string>
    <string name="incohérence">Il existe une incohérence de saisie des heures de réunion</string>

</resources>
